--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "push": "prisma db push",
-    "generate": "prisma db generate"
+    "generate": "prisma db generate",
+    "studio": "prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
@@ -44,6 +45,7 @@
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.3.0",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -53,19 +55,23 @@
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.268.0",
     "next": "13.4.19",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.4",
+    "sonner": "^0.6.2",
     "styled-components": "^6.0.7",
     "tailwind-merge": "^1.14.0",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "uploadthing": "^5.3.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
